fix: song text no longer overflows and is now properly centred

--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -67,6 +67,9 @@ main {
     #album-name {
         text-align: center;
     }
+    #song-name {
+        text-align: center;
+    }
 }
 
 @media screen and (min-width: 768px) {
